[package]
name = "tinymark"
description = "A tiny bookmark manager"
version = "0.2.0"
edition = "2021"
authors = ["Erin Nova <contact@the-system.eu.org>"]
license = "CNPLv7+"
readme = "README.md"
homepage = "https://git.lavender.software/erin/tinymark"
repository = "https://git.lavender.software/erin/tinymark"
keywords = ["cli", "bookmark", "tiny"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.0.0-alpha.1", features = ["v4", "serde", "fast-rng"] }
uuid-simd = "0.5.0"
sled = { version = "0.34.7", features = ["compression"] }
bincode = "1.3.3"
paris = { version = "1.5", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.0-rc.9", features = ["derive","color","suggestions","unicode"] }
exitcode = "1.1.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.9.0"
confy = "0.4"
serde_derive = "1.0.132"
